--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 20px;
-    background-color: #f0f0f0;
+    background-color: whitesmoke;
 }
 .container {
     max-width: 800px;
@@ -25,16 +25,20 @@ button {
     cursor: pointer;
 }
 .movie-list, .favorite-list {
-    display: flex;
+    display: flexbox;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
+    
 }
 .movie-card, .favorite-card {
-    background-color: #fff;
+    background-color: grey;
     border-radius: 5xp;
-    margin: 10px;
-    padding: 10px;
+    margin: 30px;
+    padding: 20px;
     cursor: pointer;
+    width: auto;
+    display: inline-block;
+    vertical-align: top;
     
 }
 .movie-card:hover, .favorite-card:hover {
